@@ -77,7 +77,7 @@ linkend="method-gtktextbuffer--insert-interactive-at-cursor">insert_interactive_
 	<methodname><link
 linkend="method-gtktextbuffer--insert-range">insert_range</link></methodname>
 	<methodparam><parameter
-		       role="keyword">iter</parameter></methodparam>
+	       role="keyword">iter</parameter></methodparam>
 	<methodparam><parameter
 		       role="keyword">start</parameter></methodparam>
 	<methodparam><parameter role="keyword">end</parameter></methodparam>
@@ -772,7 +772,9 @@ UTF-8.</para>
       <variablelist>
 	<varlistentry>
 	  <term><parameter role="keyword">iter</parameter>&nbsp;:</term>
-	  <listitem><simpara>a position in the buffer</simpara></listitem>
+	  <listitem><simpara>a <link
+linkend="class-gtktextiter"><classname>gtk.TextIter</classname></link>
+specifying a position in the buffer</simpara></listitem>
 	</varlistentry>
 	<varlistentry>
 	  <term><parameter role="keyword">text</parameter>&nbsp;:</term>
@@ -828,7 +830,9 @@ method, using the current cursor position as the insertion point.</para>
       <variablelist>
 	<varlistentry>
 	  <term><parameter role="keyword">iter</parameter>&nbsp;:</term>
-	  <listitem><simpara>a position in
+	  <listitem><simpara>a <link
+linkend="class-gtktextiter"><classname>gtk.TextIter</classname></link>
+specifying a position in
 <parameter>buffer</parameter></simpara></listitem>
 	</varlistentry>
 	<varlistentry>
@@ -925,17 +929,23 @@ method is appropriate here.</para>
       <variablelist>
 	<varlistentry>
 	  <term><parameter role="keyword">iter</parameter>&nbsp;:</term>
-	  <listitem><simpara>a position in the
+	  <listitem><simpara>a <link
+linkend="class-gtktextiter"><classname>gtk.TextIter</classname></link>
+specifying a position in the
 textbuffer</simpara></listitem>
 	</varlistentry>
 	<varlistentry>
 	  <term><parameter role="keyword">start</parameter>&nbsp;:</term>
-	  <listitem><simpara>a position in a (possibly different) <link
+	  <listitem><simpara>a <link
+linkend="class-gtktextiter"><classname>gtk.TextIter</classname></link>
+specifying a position in a (possibly different) <link
 linkend="class-gtktextbuffer"><classname>gtk.TextBuffer</classname></link></simpara></listitem>
 	</varlistentry>
 	<varlistentry>
 	  <term><parameter role="keyword">end</parameter>&nbsp;:</term>
-	  <listitem><simpara>another position in the same buffer as
+	  <listitem><simpara>a <link
+linkend="class-gtktextiter"><classname>gtk.TextIter</classname></link>
+specifying another position in the same buffer as
 <parameter>start</parameter></simpara></listitem>
 	</varlistentry>
       </variablelist>
@@ -972,17 +982,23 @@ share the same tag table. This method is implemented via emissions of the
       <variablelist>
 	<varlistentry>
 	  <term><parameter role="keyword">iter</parameter>&nbsp;:</term>
-	  <listitem><simpara>a position in the
+	  <listitem><simpara>a <link
+linkend="class-gtktextiter"><classname>gtk.TextIter</classname></link>
+specifying a position in the
 textbuffer</simpara></listitem>
 	</varlistentry>
 	<varlistentry>
 	  <term><parameter role="keyword">start</parameter>&nbsp;:</term>
-	  <listitem><simpara>a position in a (possibly different) <link
+	  <listitem><simpara>a <link
+linkend="class-gtktextiter"><classname>gtk.TextIter</classname></link>
+specifying a position in a (possibly different) <link
 linkend="class-gtktextbuffer"><classname>gtk.TextBuffer</classname></link></simpara></listitem>
 	</varlistentry>
 	<varlistentry>
 	  <term><parameter role="keyword">end</parameter>&nbsp;:</term>
-	  <listitem><simpara>another position in the same buffer as
+	  <listitem><simpara>a <link
+linkend="class-gtktextiter"><classname>gtk.TextIter</classname></link>
+specifying another position in the same buffer as
 <parameter>start</parameter></simpara></listitem>
 	</varlistentry>
 	<varlistentry>
@@ -1030,8 +1046,9 @@ method is appropriate here.</para>
       <variablelist>
 	<varlistentry>
 	  <term><parameter>iter</parameter>&nbsp;:</term>
-	  <listitem><simpara>an iterator in
-<parameter>buffer</parameter></simpara></listitem>
+	  <listitem><simpara>a <link
+linkend="class-gtktextiter"><classname>gtk.TextIter</classname></link>
+specifying a position in <parameter>buffer</parameter></simpara></listitem>
 	</varlistentry>
 	<varlistentry>
 	  <term><parameter>text</parameter>&nbsp;:</term>
@@ -1069,8 +1086,9 @@ method on the inserted text.</para>
       <variablelist>
 	<varlistentry>
 	  <term><parameter>iter</parameter>&nbsp;:</term>
-	  <listitem><simpara>position in
-<parameter>buffer</parameter></simpara></listitem>
+	  <listitem><simpara>a <link
+linkend="class-gtktextiter"><classname>gtk.TextIter</classname></link>
+specifying a position in <parameter>buffer</parameter></simpara></listitem>
 	</varlistentry>
 	<varlistentry>
 	  <term><parameter>text</parameter>&nbsp;:</term>
@@ -1104,13 +1122,15 @@ method, but uses tag names instead of tag objects.</para>
       <variablelist>
 	<varlistentry>
 	  <term><parameter role="keyword">start</parameter>&nbsp;:</term>
-	  <listitem><simpara>a position in the
-textbuffer</simpara></listitem>
+	  <listitem><simpara>a <link
+linkend="class-gtktextiter"><classname>gtk.TextIter</classname></link>
+specifying a position in the textbuffer</simpara></listitem>
 	</varlistentry>
 	<varlistentry>
 	  <term><parameter role="keyword">end</parameter>&nbsp;:</term>
-	  <listitem><simpara>another position in the
-textbuffer</simpara></listitem>
+	  <listitem><simpara>a <link
+linkend="class-gtktextiter"><classname>gtk.TextIter</classname></link>
+specifying another position in the textbuffer</simpara></listitem>
 	</varlistentry>
       </variablelist>
 
@@ -1142,13 +1162,15 @@ re-initialized to point to the location where text was deleted.</para>
 	<varlistentry>
 	  <term><parameter
 role="keyword">start_iter</parameter>&nbsp;:</term>
-	  <listitem><simpara>the start of the text to
-delete</simpara></listitem>
+	  <listitem><simpara>a <link
+linkend="class-gtktextiter"><classname>gtk.TextIter</classname></link>
+specifying the start of the text to delete</simpara></listitem>
 	</varlistentry>
 	<varlistentry>
 	  <term><parameter role="keyword">end_iter</parameter>&nbsp;:</term>
-	  <listitem><simpara>the end of the text to
-delete</simpara></listitem>
+	  <listitem><simpara>a <link
+linkend="class-gtktextiter"><classname>gtk.TextIter</classname></link>
+specifying the end of the text to delete</simpara></listitem>
 	</varlistentry>
 	<varlistentry>
 	  <term><parameter
@@ -1201,11 +1223,15 @@ method is appropriate here.</para>
       <variablelist>
 	<varlistentry>
 	  <term><parameter role="keyword">start</parameter>&nbsp;:</term>
-	  <listitem><simpara>the start of a range</simpara></listitem>
+	  <listitem><simpara>a <link
+linkend="class-gtktextiter"><classname>gtk.TextIter</classname></link>
+specifying the start of a range</simpara></listitem>
 	</varlistentry>
 	<varlistentry>
 	  <term><parameter role="keyword">end</parameter>&nbsp;:</term>
-	  <listitem><simpara>the end of a range</simpara></listitem>
+	  <listitem><simpara>a <link
+linkend="class-gtktextiter"><classname>gtk.TextIter</classname></link>
+specifying the end of a range</simpara></listitem>
 	</varlistentry>
 	<varlistentry>
 	  <term><parameter
@@ -1248,11 +1274,15 @@ method.</para>
       <variablelist>
 	<varlistentry>
 	  <term><parameter role="keyword">start</parameter>&nbsp;:</term>
-	  <listitem><simpara>the start of a range</simpara></listitem>
+	  <listitem><simpara>a <link
+linkend="class-gtktextiter"><classname>gtk.TextIter</classname></link>
+specifying the start of a range</simpara></listitem>
 	</varlistentry>
 	<varlistentry>
 	  <term><parameter role="keyword">end</parameter>&nbsp;:</term>
-	  <listitem><simpara>the end of a range</simpara></listitem>
+	  <listitem><simpara>a <link
+linkend="class-gtktextiter"><classname>gtk.TextIter</classname></link>
+specifying the end of a range</simpara></listitem>
 	</varlistentry>
 	<varlistentry>
 	  <term><parameter
@@ -1295,8 +1325,9 @@ reliable indicator that a pixbuf or widget is in the buffer.</para>
       <variablelist>
 	<varlistentry>
 	  <term><parameter role="keyword">iter</parameter>&nbsp;:</term>
-	  <listitem><simpara>the location to insert the
-pixbuf</simpara></listitem>
+	  <listitem><simpara>a <link
+linkend="class-gtktextiter"><classname>gtk.TextIter</classname></link>
+specifying the location to insert the pixbuf</simpara></listitem>
 	</varlistentry>
 	<varlistentry>
 	  <term><parameter role="keyword">pixbuf</parameter>&nbsp;:</term>
@@ -1333,8 +1364,9 @@ methods.</para>
       <variablelist>
 	<varlistentry>
 	  <term><parameter role="keyword">iter</parameter>&nbsp;:</term>
-	  <listitem><simpara>the location to insert the
-anchor</simpara></listitem>
+	  <listitem><simpara>a <link
+linkend="class-gtktextiter"><classname>gtk.TextIter</classname></link>
+specifying the location to insert the anchor</simpara></listitem>
 	</varlistentry>
 	<varlistentry>
 	  <term><parameter role="keyword">anchor</parameter>&nbsp;:</term>
@@ -1372,7 +1404,9 @@ is a more convenient alternative to this function.</para>
       <variablelist>
 	<varlistentry>
 	  <term><parameter role="keyword">iter</parameter>&nbsp;:</term>
-	  <listitem><simpara>a location in the buffer</simpara></listitem>
+	  <listitem><simpara>a <link
+linkend="class-gtktextiter"><classname>gtk.TextIter</classname></link>
+specifying a location in the buffer</simpara></listitem>
 	</varlistentry>
 	<varlistentry>
 	  <term><emphasis>Returns</emphasis>&nbsp;:</term>
@@ -1411,8 +1445,9 @@ role="keyword">mark_name</parameter>&nbsp;:</term>
 	</varlistentry>
 	<varlistentry>
 	  <term><parameter role="keyword">where</parameter>&nbsp;:</term>
-	  <listitem><simpara>the location to place the
-mark</simpara></listitem>
+	  <listitem><simpara>a <link
+linkend="class-gtktextiter"><classname>gtk.TextIter</classname></link>
+specifying the location to place the mark</simpara></listitem>
 	</varlistentry>
 	<varlistentry>
 	  <term><parameter
@@ -1465,8 +1500,9 @@ linkend="class-gtktextmark"><classname>gtk.TextMark</classname></link></simpara>
 	</varlistentry>
 	<varlistentry>
 	  <term><parameter role="keyword">where</parameter>&nbsp;:</term>
-	  <listitem><simpara>a new location for
-<parameter>mark</parameter></simpara></listitem>
+	  <listitem><simpara>a <link
+linkend="class-gtktextiter"><classname>gtk.TextIter</classname></link>
+specifying a new location for <parameter>mark</parameter></simpara></listitem>
 	</varlistentry>
       </variablelist>
 
@@ -1552,7 +1588,9 @@ no such mark exists in the buffer.</para>
 	</varlistentry>
 	<varlistentry>
 	  <term><parameter role="keyword">where</parameter>&nbsp;:</term>
-	  <listitem><simpara>the new location for mark</simpara></listitem>
+	  <listitem><simpara>a <link
+linkend="class-gtktextiter"><classname>gtk.TextIter</classname></link>
+specifying the new location for mark</simpara></listitem>
 	</varlistentry>
       </variablelist>
 
@@ -1649,7 +1687,9 @@ want to know whether there's a selection and what its bounds are.</para>
       <variablelist>
 	<varlistentry>
 	  <term><parameter role="keyword">where</parameter>&nbsp;:</term>
-	  <listitem><simpara>where to put the cursor</simpara></listitem>
+	  <listitem><simpara>a <link
+linkend="class-gtktextiter"><classname>gtk.TextIter</classname></link>
+specifying where to put the cursor</simpara></listitem>
 	</varlistentry>
       </variablelist>
 
@@ -1677,11 +1717,15 @@ be optimized.</para>
       <variablelist>
 	<varlistentry>
 	  <term><parameter role="keyword">ins</parameter>&nbsp;:</term>
-	  <listitem><simpara>where to put the "insert" mark</simpara></listitem>
+	  <listitem><simpara>a <link
+linkend="class-gtktextiter"><classname>gtk.TextIter</classname></link>
+specifying where to put the "insert" mark</simpara></listitem>
 	</varlistentry>
 	<varlistentry>
 	  <term><parameter role="keyword">bound</parameter>&nbsp;:</term>
-	  <listitem><simpara>where to put the "selection_bound" mark</simpara></listitem>
+	  <listitem><simpara>a <link
+linkend="class-gtktextiter"><classname>gtk.TextIter</classname></link>
+specifying where to put the "selection_bound" mark</simpara></listitem>
 	</varlistentry>
       </variablelist>
 
@@ -1721,11 +1765,15 @@ linkend="class-gtktexttag"><classname>gtk.TextTag</classname></link></simpara></
 	</varlistentry>
 	<varlistentry>
 	  <term><parameter role="keyword">start</parameter>&nbsp;:</term>
-	  <listitem><simpara>the start of the range</simpara></listitem>
+	  <listitem><simpara>a <link
+linkend="class-gtktextiter"><classname>gtk.TextIter</classname></link>
+specifying the start of the range</simpara></listitem>
 	</varlistentry>
 	<varlistentry>
 	  <term><parameter role="keyword">end</parameter>&nbsp;:</term>
-	  <listitem><simpara>the end of the range</simpara></listitem>
+	  <listitem><simpara>a <link
+linkend="class-gtktextiter"><classname>gtk.TextIter</classname></link>
+specifying the end of the range</simpara></listitem>
 	</varlistentry>
       </variablelist>
 
@@ -1759,11 +1807,15 @@ linkend="class-gtktexttag"><classname>gtk.TextTag</classname></link></simpara></
 	</varlistentry>
 	<varlistentry>
 	  <term><parameter role="keyword">start</parameter>&nbsp;:</term>
-	  <listitem><simpara>the start of the range</simpara></listitem>
+	  <listitem><simpara>a <link
+linkend="class-gtktextiter"><classname>gtk.TextIter</classname></link>
+specifying the start of the range</simpara></listitem>
 	</varlistentry>
 	<varlistentry>
 	  <term><parameter role="keyword">end</parameter>&nbsp;:</term>
-	  <listitem><simpara>the end of the range</simpara></listitem>
+	  <listitem><simpara>a <link
+linkend="class-gtktextiter"><classname>gtk.TextIter</classname></link>
+specifying the end of the range</simpara></listitem>
 	</varlistentry>
       </variablelist>
 
@@ -1798,11 +1850,15 @@ linkend="class-gtktexttag"><classname>gtk.TextTag</classname></link></simpara></
 	</varlistentry>
 	<varlistentry>
 	  <term><parameter role="keyword">start</parameter>&nbsp;:</term>
-	  <listitem><simpara>the start of the range</simpara></listitem>
+	  <listitem><simpara>a <link
+linkend="class-gtktextiter"><classname>gtk.TextIter</classname></link>
+specifying the start of the range</simpara></listitem>
 	</varlistentry>
 	<varlistentry>
 	  <term><parameter role="keyword">end</parameter>&nbsp;:</term>
-	  <listitem><simpara>the end of the range</simpara></listitem>
+	  <listitem><simpara>a <link
+linkend="class-gtktextiter"><classname>gtk.TextIter</classname></link>
+specifying the end of the range</simpara></listitem>
 	</varlistentry>
       </variablelist>
 
@@ -1840,11 +1896,15 @@ linkend="class-gtktexttag"><classname>gtk.TextTag</classname></link></simpara></
 	</varlistentry>
 	<varlistentry>
 	  <term><parameter role="keyword">start</parameter>&nbsp;:</term>
-	  <listitem><simpara>the start of the range</simpara></listitem>
+	  <listitem><simpara>a <link
+linkend="class-gtktextiter"><classname>gtk.TextIter</classname></link>
+specifying the start of the range</simpara></listitem>
 	</varlistentry>
 	<varlistentry>
 	  <term><parameter role="keyword">end</parameter>&nbsp;:</term>
-	  <listitem><simpara>the end of the range</simpara></listitem>
+	  <listitem><simpara>a <link
+linkend="class-gtktextiter"><classname>gtk.TextIter</classname></link>
+specifying the end of the range</simpara></listitem>
 	</varlistentry>
       </variablelist>
 
@@ -1875,11 +1935,15 @@ in order.</para>
       <variablelist>
 	<varlistentry>
 	  <term><parameter role="keyword">start</parameter>&nbsp;:</term>
-	  <listitem><simpara>the start of the range</simpara></listitem>
+	  <listitem><simpara>a <link
+linkend="class-gtktextiter"><classname>gtk.TextIter</classname></link>
+specifying the start of the range</simpara></listitem>
 	</varlistentry>
 	<varlistentry>
 	  <term><parameter role="keyword">end</parameter>&nbsp;:</term>
-	  <listitem><simpara>the end of the range</simpara></listitem>
+	  <listitem><simpara>a <link
+linkend="class-gtktextiter"><classname>gtk.TextIter</classname></link>
+specifying the end of the range</simpara></listitem>
 	</varlistentry>
       </variablelist>
 
@@ -1962,7 +2026,8 @@ line</simpara></listitem>
 	</varlistentry>
 	<varlistentry>
 	  <term><emphasis>Returns</emphasis>&nbsp;:</term>
-	  <listitem><simpara>an iterator</simpara></listitem>
+	  <listitem><simpara>a <link
+linkend="class-gtktextiter"><classname>gtk.TextIter</classname></link></simpara></listitem>
 	</varlistentry>
       </variablelist>
 
@@ -2001,7 +2066,8 @@ line</simpara></listitem>
 	</varlistentry>
 	<varlistentry>
 	  <term><emphasis>Returns</emphasis>&nbsp;:</term>
-	  <listitem><simpara>an iterator</simpara></listitem>
+	  <listitem><simpara>a <link
+linkend="class-gtktextiter"><classname>gtk.TextIter</classname></link></simpara></listitem>
 	</varlistentry>
       </variablelist>
 
@@ -2032,7 +2098,8 @@ from 0</simpara></listitem>
 	</varlistentry>
 	<varlistentry>
 	  <term><emphasis>Returns</emphasis>&nbsp;:</term>
-	  <listitem><simpara>an iterator</simpara></listitem>
+	  <listitem><simpara>a <link
+linkend="class-gtktextiter"><classname>gtk.TextIter</classname></link></simpara></listitem>
 	</varlistentry>
       </variablelist>
 
@@ -2060,7 +2127,8 @@ role="keyword">line_number</parameter>&nbsp;:</term>
 	</varlistentry>
 	<varlistentry>
 	  <term><emphasis>Returns</emphasis>&nbsp;:</term>
-	  <listitem><simpara>an iterator</simpara></listitem>
+	  <listitem><simpara>a <link
+linkend="class-gtktextiter"><classname>gtk.TextIter</classname></link></simpara></listitem>
 	</varlistentry>
       </variablelist>
 
@@ -2080,7 +2148,8 @@ an iterator pointing to the start of the line specified by
       <variablelist>
 	<varlistentry>
 	  <term><emphasis>Returns</emphasis>&nbsp;:</term>
-	  <listitem><simpara>an iterator</simpara></listitem>
+	  <listitem><simpara>a <link
+linkend="class-gtktextiter"><classname>gtk.TextIter</classname></link></simpara></listitem>
 	</varlistentry>
       </variablelist>
 
@@ -2103,7 +2172,8 @@ with an argument of 0.
       <variablelist>
 	<varlistentry>
 	  <term><emphasis>Returns</emphasis>&nbsp;:</term>
-	  <listitem><simpara>an iterator</simpara></listitem>
+	  <listitem><simpara>a <link
+linkend="class-gtktextiter"><classname>gtk.TextIter</classname></link></simpara></listitem>
 	</varlistentry>
       </variablelist>
 
@@ -2128,8 +2198,9 @@ method to get character position 0) to the end iterator.</para>
       <variablelist>
 	<varlistentry>
 	  <term><emphasis>Returns</emphasis>&nbsp;:</term>
-	  <listitem><simpara>a tuple containing iterators that point at the
-first and last positions in the buffer</simpara></listitem>
+	  <listitem><simpara>a tuple containing <link
+linkend="class-gtktextiter"><classname>gtk.TextIter</classname></link> objects
+that point at the first and last positions in the buffer</simpara></listitem>
 	</varlistentry>
       </variablelist>
 
@@ -2153,6 +2224,11 @@ buffer lies within the range.</para>
 	  <listitem><simpara>a <link
 linkend="class-gtktextmark"><classname>gtk.TextMark</classname></link> in
 the textbuffer</simpara></listitem>
+	</varlistentry>
+	<varlistentry>
+	  <term><emphasis>Returns</emphasis>&nbsp;:</term>
+	  <listitem><simpara>a <link
+linkend="class-gtktextiter"><classname>gtk.TextIter</classname></link></simpara></listitem>
 	</varlistentry>
       </variablelist>
 
@@ -2178,11 +2254,16 @@ an iterator that points at the current position of
 	  <listitem><simpara>a child anchor that appears in the
 textbuffer</simpara></listitem>
 	</varlistentry>
+	<varlistentry>
+	  <term><emphasis>Returns</emphasis>&nbsp;:</term>
+	  <listitem><simpara>a <link
+linkend="class-gtktextiter"><classname>gtk.TextIter</classname></link></simpara></listitem>
+	</varlistentry>
       </variablelist>
 
-      <para>The get_iter_at_child_anchor() method returns an iterator that
-points at the location of <parameter>anchor</parameter> within the
-textbuffer.</para>
+      <para>The <methodname>get_iter_at_child_anchor</methodname>() method
+returns an iterator that points at the location of
+<parameter>anchor</parameter> within the textbuffer.</para>
 
     </refsect2>
 
@@ -2423,8 +2504,8 @@ loop runs, the paste data will be inserted.)</para>
       <variablelist>
 	<varlistentry>
 	  <term><emphasis>Returns</emphasis>&nbsp;:</term>
-	  <listitem><simpara>a tuple containing iterators pointing to the
-selection start and end or an empty tuple if there is no
+	  <listitem><simpara>a tuple containing <link
+linkend="class-gtktextiter"><classname>gtk.TextIter</classname></link> objects pointing to the selection start and end or an empty tuple if there is no
 selection</simpara></listitem>
 	</varlistentry>
       </variablelist>
@@ -2614,13 +2695,15 @@ applied</simpara></listitem>
 	</varlistentry>
 	<varlistentry>
 	  <term><parameter>start</parameter>&nbsp;:</term>
-	  <listitem><simpara>an iterator pointing to the start of the range
-of text</simpara></listitem>
+	  <listitem><simpara>a <link
+linkend="class-gtktextiter"><classname>gtk.TextIter</classname></link>
+pointing to the start of the range of text</simpara></listitem>
 	</varlistentry>
 	<varlistentry>
 	  <term><parameter>end</parameter>&nbsp;:</term>
-	  <listitem><simpara>an iterator pointing to the end of the range of
-text</simpara></listitem>
+	  <listitem><simpara>a <link
+linkend="class-gtktextiter"><classname>gtk.TextIter</classname></link>
+pointing to the end of the range of text</simpara></listitem>
 	</varlistentry>
 	<varlistentry>
 	  <term><parameter>user_param1</parameter>&nbsp;:</term>
@@ -2735,13 +2818,15 @@ signal</simpara></listitem>
 	</varlistentry>
 	<varlistentry>
 	  <term><parameter>start</parameter>&nbsp;:</term>
-	  <listitem><simpara>an iterator pointing to the start of the range
-of text</simpara></listitem>
+	  <listitem><simpara>a <link
+linkend="class-gtktextiter"><classname>gtk.TextIter</classname></link>
+pointing to the start of the range of text</simpara></listitem>
 	</varlistentry>
 	<varlistentry>
 	  <term><parameter>end</parameter>&nbsp;:</term>
-	  <listitem><simpara>an iterator pointing to the end of the range of
-text</simpara></listitem>
+	  <listitem><simpara>a <link
+linkend="class-gtktextiter"><classname>gtk.TextIter</classname></link>
+pointing to the end of the range of text</simpara></listitem>
 	</varlistentry>
 	<varlistentry>
 	  <term><parameter>user_param1</parameter>&nbsp;:</term>
@@ -3018,8 +3103,10 @@ signal</simpara></listitem>
 	</varlistentry>
 	<varlistentry>
 	  <term><parameter>iter</parameter>&nbsp;:</term>
-	  <listitem><simpara>an iterator pointing at the location where
-<parameter>textmark</parameter> will be set.</simpara></listitem>
+	  <listitem><simpara>a <link
+linkend="class-gtktextiter"><classname>gtk.TextIter</classname></link>
+pointing at the location where <parameter>textmark</parameter> will be
+set.</simpara></listitem>
 	</varlistentry>
 	<varlistentry>
 	  <term><parameter>textmark</parameter>&nbsp;:</term>
@@ -3109,13 +3196,15 @@ removed</simpara></listitem>
 	</varlistentry>
 	<varlistentry>
 	  <term><parameter>start</parameter>&nbsp;:</term>
-	  <listitem><simpara>an iterator pointing to the start of the range
-of text</simpara></listitem>
+	  <listitem><simpara>a <link
+linkend="class-gtktextiter"><classname>gtk.TextIter</classname></link>
+pointing to the start of the range of text</simpara></listitem>
 	</varlistentry>
 	<varlistentry>
 	  <term><parameter>end</parameter>&nbsp;:</term>
-	  <listitem><simpara>an iterator pointing to the end of the range of
-text</simpara></listitem>
+	  <listitem><simpara>a <link
+linkend="class-gtktextiter"><classname>gtk.TextIter</classname></link>
+ pointing to the end of the range of text</simpara></listitem>
 	</varlistentry>
 	<varlistentry>
 	  <term><parameter>user_param1</parameter>&nbsp;:</term>
