@@ -1,5 +1,8 @@
 2005-07-22  John Finlay  <finlay@moeraki.com>
 
+	* pygtk-gtktextbuffer.xml:  Explicitly identify params that are
+	TextIters. Fixes #308835. (Nikos Kouremenos)
+
 	* pygtk-gtknotebook.xml (switch-page): Add missing param descriptions.
 	Fixes #311283 (Nikos Kouremenos)
 
